fix: terminal adds top whitespace (#2821)

--- a/packages/terminal-next/src/browser/component/resize.module.less
+++ b/packages/terminal-next/src/browser/component/resize.module.less
@@ -19,7 +19,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    padding: 0px 2px 0px 10px;
+    padding: 8px 2px 0 10px;
   }
 }
 
